--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,1 +1,41 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+main {
+  flex: 1 0 auto;
+}
+
+nav,
+footer {
+  font-family: "Lato", sans-serif;
+}
+
+p a i {
+  color: white;
+}
+
+.main-bg {
+  background-image: url("/static/images/main_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: 70vh;
+  background-size: cover;
+}
+
+.logo {
+  display: block;
+  opacity: 0.8;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: 50%;
+}
+
+.title-text {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 2em;
+}
