--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %} {% url 'home_page' as home_url %}
+{% load static %} {% url 'home' as home_url %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,24 +6,99 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blades &amp; Fadez</title>
+
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Font awesome kit -->
+    <script
+      src="https://kit.fontawesome.com/3ed75587e6.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- Bootstrap style sheet -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
 
     <!-- Custom styelesheet -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   </head>
-  <body>
-    {% block content %} {% endblock %}
+  <body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Bladez &amp; Fadez</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link {% if request.path == home_url%}active{%endif%}"
+                aria-current="page"
+                href="#"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <main>{% block content %} {% endblock %}</main>
+
+    <footer class="footer mt-auto py-3 bg-dark">
+      <p class="m-0 text-center text-white">
+        {% block copyright %}Made by Code Instituters{% endblock %}
+      </p>
+      <p class="m-0 text-center text-white">
+        Follow us:
+        <a href="https://www.facebook.com/" target="_blank"
+          ><i class="fab fa-facebook-square ms-3"></i
+        ></a>
+
+        <a href="https://www.twitter.com/" target="_blank"
+          ><i class="fab fa-twitter-square ms-3"></i
+        ></a>
+
+        <a href="https://www.instagram.com/" target="_blank"
+          ><i class="fab fa-instagram-square ms-3"></i
+        ></a>
+        <a href="https://www.youtube.com/" target="_blank">
+          <i class="fab fa-youtube-square ms-3"></i
+        ></a>
+      </p>
+    </footer>
 
     <!-- Bootstrap js -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
   </body>
