--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -35,7 +35,25 @@ p a i {
 }
 
 .title-text {
-  margin-top: 10px;
+  margin-top: 20px;
   text-align: center;
   font-size: 2em;
+}
+
+.title-text-container {
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
+  height: 3rem;
+  opacity: 0.8;
+  width: 20%;
+}
+
+.details-border {
+  border-left: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+.btn-book {
+  margin-top: 30px;
 }
