Add services to index.html page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Oswald", sans-serif;
+}
+
 main {
   flex: 1 0 auto;
 }
@@ -56,4 +60,14 @@ p a i {
 
 .btn-book {
   margin-top: 30px;
+}
+
+.service-img {
+  /* height: 70%; */
+  width: 100%;
+  margin-left: 0;
+}
+
+.vertical-service-img {
+  height: 10%;
 }
