--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -41,4 +41,66 @@
   </div>
 </section>
 
+<section class="services">
+  <h2 class="text-center bg-dark text-white mb-0 pb-3">Services Offered</h2>
+  <div class="container-fluid bg-dark g-0">
+    <div class="row">
+      <div class="col-md-4">
+        <img
+          src="{% static 'images/shaving_service.jpg'%}"
+          alt="Person having hair cut"
+          class="service-img"
+        />
+      </div>
+      <div class="col-md-4 text-white">
+        <h3 class="text-center pt-5">Shaving and Beard Trimming</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+          perferendis similique expedita sit distinctio! Ab ad repudiandae
+          fugiat molestiae deserunt eos, iure harum id ducimus eaque saepe
+          officia, qui assumenda?
+        </p>
+      </div>
+      <div class="col-md-4">
+        <img
+          src="{% static 'images/beard_trimming.jpg'%}"
+          alt="Man having beard trimmed"
+          class="service-img"
+        />
+      </div>
+    </div>
+    <div class="row bg-light pt-2">
+      <div class="col-md-6">
+        <h3 class="text-center">Hair Cutting</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores
+          cupiditate reprehenderit a veritatis velit! Perferendis accusantium
+          ipsum libero vitae iusto, fugiat, corporis quam placeat tempore animi
+          soluta reprehenderit sequi eius!
+        </p>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+          id sed necessitatibus natus consequatur sit omnis dolorem ipsum itaque
+          aliquam ullam quaerat deleniti ea, laborum suscipit, obcaecati rerum
+          ab sint!
+        </p>
+      </div>
+      <div class="col-md-3">
+        <img
+          src="{% static 'images/cutting_tools.jpg' %}"
+          alt="Image of barbers tools"
+          class="service-img"
+        />
+      </div>
+      <div class="col-md-3">
+        <img
+          src="{% static 'images/john-karlo-mendoza.jpg' %}"
+          alt="Picture of cutting instruments"
+          class="service-img"
+        />
+      </div>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
